--- a/app/src/main/res/layout/activity_refrigerator.xml
+++ b/app/src/main/res/layout/activity_refrigerator.xml
@@ -60,12 +60,12 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 app:ntb_animation_duration="400"
-                app:ntb_preview_colors="@array/red_wine"
+                app:ntb_preview_colors="@array/white"
                 app:ntb_corners_radius="25dp"
                 app:ntb_scaled="false"
                 app:ntb_active_color="#FFF"
                 app:ntb_inactive_color="#FFF"
-                app:ntb_bg_color="#FFD232"/>
+                app:ntb_bg_color="#87B5EB"/>
 
         </FrameLayout>
 
